antlr4/pascal/pascalParser.py
# Generated from pascal.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class pascalParser ( Parser ):

    grammarFileName = "pascal.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "':='", "','", 
                     "';'", "':'", "'='", "'<>'", "'<'", "'<='", "'>='", 
                     "'>'", "'('", "')'", "'['", "'(.'", "']'", "'.)'", 
                     "'^'", "'@'", "'.'", "'..'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "AND", "ARRAY", "BEGIN", "BOOLEAN", "CASE", 
                      "CHAR", "CHR", "CONST", "DIV", "DO", "DOWNTO", "ELSE", 
                      "END", "FILE", "FOR", "FUNCTION", "GOTO", "IF", "IN", 
                      "INTEGER", "LABEL", "MOD", "NIL", "NOT", "OF", "OR", 
                      "PACKED", "PROCEDURE", "PROGRAM", "REAL", "RECORD", 
                      "REPEAT", "SET", "THEN", "TO", "TYPE", "UNTIL", "VAR", 
                      "WHILE", "WITH", "PLUS", "MINUS", "STAR", "SLASH", 
                      "ASSIGN", "COMMA", "SEMI", "COLON", "EQUAL", "NOT_EQUAL", 
                      "LT", "LE", "GE", "GT", "LPAREN", "RPAREN", "LBRACK", 
                      "LBRACK2", "RBRACK", "RBRACK2", "POINTER", "AT", "DOT", 
                      "DOTDOT", "LCURLY", "RCURLY", "UNIT", "INTERFACE", 
                      "USES", "STRING", "IMPLEMENTATION", "TRUE", "FALSE", 
                      "WS", "COMMENT_1", "COMMENT_2", "IDENT", "STRING_LITERAL", 
                      "NUM_INT", "NUM_REAL" ]

    RULE_program = 0
    RULE_programHeading = 1
    RULE_identifier = 2
    RULE_block = 3
    RULE_usesUnitsPart = 4
    RULE_labelDeclarationPart = 5
    RULE_label = 6
    RULE_constantDefinitionPart = 7
    RULE_constantDefinition = 8
    RULE_constantChr = 9
    RULE_constant = 10
    RULE_unsignedNumber = 11
    RULE_unsignedInteger = 12
    RULE_unsignedReal = 13
    RULE_sign = 14
    RULE_bool_ = 15
    RULE_string = 16
    RULE_typeDefinitionPart = 17
    RULE_typeDefinition = 18
    RULE_functionType = 19
    RULE_procedureType = 20
    RULE_type_ = 21
    RULE_simpleType = 22
    RULE_scalarType = 23
    RULE_subrangeType = 24
    RULE_typeIdentifier = 25
    RULE_structuredType = 26
    RULE_unpackedStructuredType = 27
    RULE_stringtype = 28
    RULE_arrayType = 29
    RULE_typeList = 30
    RULE_indexType = 31
    RULE_componentType = 32
    RULE_recordType = 33
    RULE_fieldList = 34
    RULE_fixedPart = 35
    RULE_recordSection = 36
    RULE_variantPart = 37
    RULE_tag = 38
    RULE_variant = 39
    RULE_setType = 40
    RULE_baseType = 41
    RULE_fileType = 42
    RULE_pointerType = 43
    RULE_variableDeclarationPart = 44
    RULE_variableDeclaration = 45
    RULE_procedureAndFunctionDeclarationPart = 46
    RULE_procedureOrFunctionDeclaration = 47
    RULE_procedureDeclaration = 48
    RULE_formalParameterList = 49
    RULE_formalParameterSection = 50
    RULE_parameterGroup = 51
    RULE_identifierList = 52
    RULE_constList = 53
    RULE_functionDeclaration = 54
    RULE_resultType = 55
    RULE_statement = 56
    RULE_unlabelledStatement = 57
    RULE_simpleStatement = 58
    RULE_assignmentStatement = 59
    RULE_variable = 60
    RULE_expression = 61
    RULE_relationaloperator = 62
    RULE_simpleExpression = 63
    RULE_additiveoperator = 64
    RULE_term = 65
    RULE_multiplicativeoperator = 66
    RULE_signedFactor = 67
    RULE_factor = 68
    RULE_unsignedConstant = 69
    RULE_functionDesignator = 70
    RULE_parameterList = 71
    RULE_set_ = 72
    RULE_elementList = 73
    RULE_element = 74
    RULE_procedureStatement = 75
    RULE_actualParameter = 76
    RULE_parameterwidth = 77
    RULE_gotoStatement = 78
    RULE_emptyStatement = 79
    RULE_empty_ = 80
    RULE_structuredStatement = 81
    RULE_compoundStatement = 82
    RULE_statements = 83
    RULE_conditionalStatement = 84
    RULE_ifStatement = 85
    RULE_caseStatement = 86
    RULE_caseListElement = 87
    RULE_repetetiveStatement = 88
    RULE_whileStatement = 89
    RULE_repeatStatement = 90
    RULE_forStatement = 91
    RULE_forList = 92
    RULE_initialValue = 93
    RULE_finalValue = 94
    RULE_withStatement = 95
    RULE_recordVariableList = 96

    ruleNames =  [ "program", "programHeading", "identifier", "block", "usesUnitsPart", 
                   "labelDeclarationPart", "label", "constantDefinitionPart", 
                   "constantDefinition", "constantChr", "constant", "unsignedNumber", 
                   "unsignedInteger", "unsignedReal", "sign", "bool_", "string", 
                   "typeDefinitionPart", "typeDefinition", "functionType", 
                   "procedureType", "type_", "simpleType", "scalarType", 
                   "subrangeType", "typeIdentifier", "structuredType", "unpackedStructuredType", 
                   "stringtype", "arrayType", "typeList", "indexType", "componentType", 
                   "recordType", "fieldList", "fixedPart", "recordSection", 
                   "variantPart", "tag", "variant", "setType", "baseType", 
                   "fileType", "pointerType", "variableDeclarationPart", 
                   "variableDeclaration", "procedureAndFunctionDeclarationPart", 
                   "procedureOrFunctionDeclaration", "procedureDeclaration", 
                   "formalParameterList", "formalParameterSection", "parameterGroup", 
                   "identifierList", "constList", "functionDeclaration", 
                   "resultType", "statement", "unlabelledStatement", "simpleStatement", 
                   "assignmentStatement", "variable", "expression", "relationaloperator", 
                   "simpleExpression", "additiveoperator", "term", "multiplicativeoperator", 
                   "signedFactor", "factor", "unsignedConstant", "functionDesignator", 
                   "parameterList", "set_", "elementList", "element", "procedureStatement", 
                   "actualParameter", "parameterwidth", "gotoStatement", 
                   "emptyStatement", "empty_", "structuredStatement", "compoundStatement", 
                   "statements", "conditionalStatement", "ifStatement", 
                   "caseStatement", "caseListElement", "repetetiveStatement", 
                   "whileStatement", "repeatStatement", "forStatement", 
                   "forList", "initialValue", "finalValue", "withStatement", 
                   "recordVariableList" ]

    EOF = Token.EOF
    AND=1
    ARRAY=2
    BEGIN=3
    BOOLEAN=4
    CASE=5
    CHAR=6
    CHR=7
    CONST=8
    DIV=9
    DO=10
    DOWNTO=11
    ELSE=12
    END=13
    FILE=14
    FOR=15
    FUNCTION=16
    GOTO=17
    IF=18
    IN=19
    INTEGER=20
    LABEL=21
    MOD=22
    NIL=23
    NOT=24
    OF=25
    OR=26
    PACKED=27
    PROCEDURE=28
    PROGRAM=29
    REAL=30
    RECORD=31
    REPEAT=32
    SET=33
    THEN=34
    TO=35
    TYPE=36
    UNTIL=37
    VAR=38
    WHILE=39
    WITH=40
    PLUS=41
    MINUS=42
    STAR=43
    SLASH=44
    ASSIGN=45
    COMMA=46
    SEMI=47
    COLON=48
    EQUAL=49
    NOT_EQUAL=50
    LT=51
    LE=52
    GE=53
    GT=54
    LPAREN=55
    RPAREN=56
    LBRACK=57
    LBRACK2=58
    RBRACK=59
    RBRACK2=60
    POINTER=61
    AT=62
    DOT=63
    DOTDOT=64
    LCURLY=65
    RCURLY=66
    UNIT=67
    INTERFACE=68
    USES=69
    STRING=70
    IMPLEMENTATION=71
    TRUE=72
    FALSE=73
    WS=74
    COMMENT_1=75
    COMMENT_2=76
    IDENT=77
    STRING_LITERAL=78
    NUM_INT=79
    NUM_REAL=80

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programHeading(self):
            return self.getTypedRuleContext(pascalParser.ProgramHeadingContext,0)


        def block(self):
            return self.getTypedRuleContext(pascalParser.BlockContext,0)


        def DOT(self):
            return self.getToken(pascalParser.DOT, 0)

        def INTERFACE(self):
            return self.getToken(pascalParser.INTERFACE, 0)

        def getRuleIndex(self):
            return pascalParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = pascalParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 194
            self.programHeading()
            self.state = 196
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==pascalParser.INTERFACE:
                self.state = 195
                self.match(pascalParser.INTERFACE)


            self.state = 198
            self.block()
            self.state = 199
            self.match(pascalParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramHeadingContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(pascalParser.PROGRAM, 0)

        def identifier(self):
            return self.getTypedRuleContext(pascalParser.IdentifierContext,0)


        def SEMI(self):
            return self.getToken(pascalParser.SEMI, 0)

        def LPAREN(self):
            return self.getToken(pascalParser.LPAREN, 0)

        def identifierList(self):
            return self.getTypedRuleContext(pascalParser.IdentifierListContext,0)


        def RPAREN(self):
            return self.getToken(pascalParser.RPAREN, 0)

        def UNIT(self):
            return self.getToken(pascalParser.UNIT, 0)

        def getRuleIndex(self):
            return pascalParser.RULE_programHeading

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgramHeading" ):
                listener.enterProgramHeading(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgramHeading" ):
                listener.exitProgramHeading(self)




    def programHeading(self):

        localctx = pascalParser.ProgramHeadingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programHeading)
        self._la = 0 # Token type
        try:
            self.state = 215
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [pascalParser.PROGRAM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 201
                self.match(pascalParser.PROGRAM)
                self.state = 202
                self.identifier()
                self.state = 207
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==pascalParser.LPAREN:
                    self.state = 203
                    self.match(pascalParser.LPAREN)
                    self.state = 204
                    self.identifierList()
                    self.state = 205
                    self.match(pascalParser.RPAREN)


                self.state = 209
                self.match(pascalParser.SEMI)
                pass
            elif token in [pascalParser.UNIT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 211
                self.match(pascalParser.UNIT)
                self.state = 212
                self.identifier()
                self.state = 213
                self.match(pascalParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(pascalParser.IDENT, 0)

        def getRuleIndex(self):
            return pascalParser.RULE_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)




    def identifier(self):

        localctx = pascalParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_identifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 217
            self.match(pascalParser.IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def compoundStatement(self):
            return self.getTypedRuleContext(pascalParser.CompoundStatementContext,0)


        def labelDeclarationPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pascalParser.LabelDeclarationPartContext)
            else:
                return self.getTypedRuleContext(pascalParser.LabelDeclarationPartContext,i)


        def constantDefinitionPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pascalParser.ConstantDefinitionPartContext)
            else:
                return self.getTypedRuleContext(pascalParser.ConstantDefinitionPartContext,i)


        def typeDefinitionPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pascalParser.TypeDefinitionPartContext)
            else:
                return self.getTypedRuleContext(pascalParser.TypeDefinitionPartContext,i)


        def variableDeclarationPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pascalParser.VariableDeclarationPartContext)
            else:
                return self.getTypedRuleContext(pascalParser.VariableDeclarationPartContext,i)


        def procedureAndFunctionDeclarationPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pascalParser.ProcedureAndFunctionDeclarationPartContext)
            else:
                return self.getTypedRuleContext(pascalParser.ProcedureAndFunctionDeclarationPartContext,i)


        def usesUnitsPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pascalParser.UsesUnitsPartContext)
            else:
                return self.getTypedRuleContext(pascalParser.UsesUnitsPartContext,i)


        def IMPLEMENTATION(self, i:int=None):
            if i is None:
                return self.getTokens(pascalParser.IMPLEMENTATION)
            else:
                return self.getToken(pascalParser.IMPLEMENTATION, i)

        def getRuleIndex(self):
            return pascalParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = pascalParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 228
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 8)) & ~0x3f) == 0 and ((1 << (_la - 8)) & ((1 << (pascalParser.CONST - 8)) | (1 << (pascalParser.FUNCTION - 8)) | (1 << (pascalParser.LABEL - 8)) | (1 << (pascalParser.PROCEDURE - 8)) | (1 << (pascalParser.TYPE - 8)) | (1 << (pascalParser.VAR - 8)) | (1 << (pascalParser.USES - 8)) | (1 << (pascalParser.IMPLEMENTATION - 8)))) != 0):
                self.state = 226
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [pascalParser.LABEL]:
                    self.state = 219
                    self.labelDeclarationPart()
                    pass
                elif token in [pascalParser.CONST]:
                    self.state = 220
                    self.constantDefinitionPart()
                    pass
                elif token in [pascalParser.TYPE]:
                    self.state = 221
                    self.typeDefinitionPart()
                    pass
                elif token in [pascalParser.VAR]:
                    self.state = 222
                    self.variableDeclarationPart()
                    pass
                elif token in [pascalParser.FUNCTION, pascalParser.PROCEDURE]:
                    self.state = 223
                    self.procedureAndFunctionDeclarationPart()
                    pass
                elif token in [pascalParser.USES]:
                    self.state = 224
                    self.usesUnitsPart()
                    pass
                elif token in [pascalParser.IMPLEMENTATION]:
                    self.state = 225
                    self.match(pascalParser.IMPLEMENTATION)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 230
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 231
            self.compoundStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UsesUnitsPartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USES(self):
            return self.getToken(pascalParser.USES, 0)

        def identifierList(self):
            return self.getTypedRuleContext(pascalParser.IdentifierListContext,0)


        def SEMI(self):
            return self.getToken(pascalParser.SEMI, 0)

        def getRuleIndex(self):
            return pascalParser.RULE_usesUnitsPart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUsesUnitsPart" ):
                listener.enterUsesUnitsPart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUsesUnitsPart" ):
                listener.exitUsesUnitsPart(self)




    def usesUnitsPart(self):
